# DeepSentine

./: .env.example  .gitignore  Cargo.toml  README.md  island.py
scripts/: dump.rdb  export_prices.py
src/: client.rs  main.rs  types.rs
