[package]
name = "Deep-Sentinel"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
axum = { version = "0.7", features = ["ws", "macros"] }
hyper = "1.8"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
futures = "0.3"
futures-util = "0.3"
async-stream = "0.3"
anyhow = "1.0"
redis = { version = "0.24", features = ["tokio-comp", "json"] }
dotenv = "0.15"
tiktoken-rs = "0.5"
regex = "1.10"
